Correct an abbreviation on the species page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1353 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -193,7 +193,7 @@
                 </div>
 
                 <div class="section">
-                    <h5>US Distribution</h5>
+                    <h5>U.S. Distribution</h5>
                     <img
                         src="http://bonap.org/BONAPmaps2010/map%20sized/{{ scientific_name }}.png"
                         alt="US Map" class="map"
