inform user that the site is in beta/draft (idea stolen from stackoverflow)
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1358 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -1,3 +1,39 @@
+<style>
+#notify-container {
+    color: ##D4EE3B;
+    font-size: 150%;
+    font-weight: bold;
+    height: 0;
+    left: 0;
+    position: fixed;
+    text-align: center;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
+#notify-container div {
+    background-color: #E39F19;
+    border-bottom: 1px solid #D6800C;
+    padding: 7px 0;
+    color: #735005;
+}
+
+#notify-container a {
+    color: #735005;
+    text-decoration: underline;
+}
+</style>
+
+<div id="notify-container">
+    <div style="" id="notify--1">
+        <span class="notify-text">
+           DRAFT: this web site is site still under development.
+        </span>
+    </div>
+</div>
+
+
     <header>
         <div class="container">
             <h2><a 
