--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -28,7 +28,7 @@
 <div id="notify-container">
     <div style="" id="notify--1">
         <span class="notify-text">
-           DRAFT: this web site is site still under development.
+           DRAFT: this web site under development.
         </span>
     </div>
 </div>
