Add a filled-in map from the API to the test page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1360 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/maptest.html
+++ b/gobotany/simplekey/templates/simplekey/maptest.html
@@ -33,6 +33,29 @@
             type="image/svg+xml" title="New England counties map"
             id="ne-counties-map"> <![endif]-->
         </object>
-        
+
+        <p>Display a filled-in map from the API, for
+            <i>Dendrolycopodium dendroideum</i>.</p>
+
+        <!--[if !IE]>-->
+        <object
+            data="/api/maps/dendrolycopodium-dendroideum-distribution-map.svg"
+            type="image/svg+xml" title="New England distribution:
+            Dendrolycopodium dendroideum"
+            id="ne-counties-map"> <!--<![endif]-->
+        <!--[if lt IE 9]>
+        <object
+            src="/api/maps/dendrolycopodium-dendroideum-distribution-map.svg"
+            classid="image/svg+xml" title="New England distribution:
+            Dendrolycopodium dendroideum"
+            id="ne-counties-map"> <![endif]-->
+        <!--[if gte IE 9]>
+        <object
+            data="/api/maps/dendrolycopodium-dendroideum-distribution-map.svg"
+            type="image/svg+xml" title="New England distribution:
+            Dendrolycopodium dendroideum"
+            id="ne-counties-map"> <![endif]-->
+        </object>
+
     </body>
 </html>
