Correct object IDs in the maps test page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1361 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/maptest.html
+++ b/gobotany/simplekey/templates/simplekey/maptest.html
@@ -10,7 +10,7 @@
             data-path="/static/svgweb/"></script>
 
         <style>
-            #ne-counties-map {
+            #ne-counties-map, #filled-in-map {
                 height: 290px; /* WebKit needs height and width set */
                 width: 187px;
             }
@@ -42,19 +42,19 @@
             data="/api/maps/dendrolycopodium-dendroideum-distribution-map.svg"
             type="image/svg+xml" title="New England distribution:
             Dendrolycopodium dendroideum"
-            id="ne-counties-map"> <!--<![endif]-->
+            id="filled-in-map"> <!--<![endif]-->
         <!--[if lt IE 9]>
         <object
             src="/api/maps/dendrolycopodium-dendroideum-distribution-map.svg"
             classid="image/svg+xml" title="New England distribution:
             Dendrolycopodium dendroideum"
-            id="ne-counties-map"> <![endif]-->
+            id="filled-in-map"> <![endif]-->
         <!--[if gte IE 9]>
         <object
             data="/api/maps/dendrolycopodium-dendroideum-distribution-map.svg"
             type="image/svg+xml" title="New England distribution:
             Dendrolycopodium dendroideum"
-            id="ne-counties-map"> <![endif]-->
+            id="filled-in-map"> <![endif]-->
         </object>
 
     </body>
