Bugfix: removed the errant <form> wrapper element that was making the Enter key cause a submit if pressed inside of the length filter's text input.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1364 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -48,23 +48,16 @@
                             aria-relevant="additions removals">
                             <a href="#" class="close"></a>
                             <h4>Leaf Arrangement</h4>
-                            <form id="character_values_form">
-                                <div>
-                                    <div class="info">
-
-                                        <div class="question"></div>
-                                        <div class="hint"></div>
-
-                                        <div class="values"></div>
-
-                                        <div class="actions">
-                                            <a class="apply-btn" 
-                                                href="#">Apply</a>
-                                        </div>
-
+                            <div>
+                                <div class="info">
+                                    <div class="question"></div>
+                                    <div class="hint"></div>
+                                    <div class="values"></div>
+                                    <div class="actions">
+                                      <a class="apply-btn" href="#">Apply</a>
                                     </div>
                                 </div>
-                            </form>
+                            </div>
                             <div class="clearit"></div>
                         </div><!--Closes .working-area-->
 
