--- a/gobotany/simplekey/templates/simplekey/family.html
+++ b/gobotany/simplekey/templates/simplekey/family.html
@@ -44,7 +44,7 @@ Family: {{ family.name }} {% if common_name %}({{ common_name }}){% endif %}{% e
                         {% endfor %}
                     </div>
 
-                    <h4>Genera in this Plant Family:</h4>
+                    <h4>This Family&#8217;s Genera:</h4>
                     <ul class="genera">
                     {% for genus in family.genera.all %}
                         <li><em><a href="{% url simplekey-genus genus.slug %}"
