--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="clearit"></div>
                 
-                <h3>Facts about...</h3>
+                <h3>Facts About...</h3>
                 <p>
                     {% if taxon.factoid|length > 0 %}
                         {{ taxon.factoid }}
