--- a/gobotany/simplekey/templates/simplekey/family.html
+++ b/gobotany/simplekey/templates/simplekey/family.html
@@ -26,7 +26,7 @@ Family: {{ family.name }} {% if common_name %}({{ common_name }}){% endif %}{% e
                     {% endif %}
                     </p>
                     
-                    <div class="familypics">
+                    <div class="pics">
                         {% for drawing in family_drawings %}
                             <div>
                                 <a rel="shadowbox"
@@ -47,12 +47,13 @@ Family: {{ family.name }} {% if common_name %}({{ common_name }}){% endif %}{% e
                     <h4>This Family&#8217;s Genera:</h4>
                     <ul class="genera">
                     {% for genus in family.genera.all %}
-                        <li><em><a href="{% url simplekey-genus genus.slug %}"
-                        >{{ genus.name }}</a></em></li>
+                        <li><i><a href="{% url simplekey-genus genus.slug %}"
+                        >{{ genus.name }}</a></i></li>
                     {% endfor %}
                     </ul>
 
-                    <a class="family-genera-btn" href="{% url simplekey-pile pilegroup.slug pile.slug %}#family={{ family.name }}"></a>
+                    <a class="family-genera-btn" href="{% url simplekey-pile pilegroup.slug pile.slug %}#family={{ family.name }}">Key
+                        to this Family&#8217;s Genera</a>
 
                 </div>
                 <div id="sidebar" style="height: 634px;">
