--- a/gobotany/simplekey/templates/simplekey/genus.html
+++ b/gobotany/simplekey/templates/simplekey/genus.html
@@ -1,95 +1,95 @@
-{% extends "simplekey/_old_base.html" %}
+{% extends "simplekey/_base.html" %}
 {% load thumbnail %}
 {% load simplekey_extras %}
+
 {% block title %}
-Genus {{ item.name }} ({% if item.common_name %}{{ item.common_name }}{% else %}common name here{% endif %})
-{% endblock %}
-{% block content %}
-  <h1>Genus <em>{{ item.name }}</em></h1>
-  <div id="genus">
-    {% if item.common_name %}
-        <h2>{{ item.common_name }}</h2>
-    {% else %}
-        <h2>common name here</h2>
-    {% endif %}
-
-    <div id="images">
-      <h3>Images</h3>
-      <p>
-          {% if item_images %}
-              {% for i in item_images %}
-                  {% if forloop.first %}
-                      <img src="{{ i.image.url }}">
-                  {% endif %}
-              {% endfor %}
-          {% else %}
-              <img src="/static/nothing.png" alt="not available">
-          {% endif %}
-      </p>
-      <p class="nav"><a>&lt; prev</a> <span>? of ?</span>
-          <a>next &gt;</a></p>
-    </div>
-
-    <div id="info">
-        <h3>Family</h3>
-        <p><a href="{% url simplekey-family item.family.slug %}"
-              >{{ item.family.name }}</a></p>
-
-        <h3>Description</h3>
-        <p>{% if item.description %}
-               {{ item.description }}
-           {% else %}
-               This is a placeholder description.
-               (Test glossary highlighting with the term isophyllous here.)
-           {% endif %}</p>
-
-        <h3>Species:</h3>
-        <ul class="species">
-          {% for species in item.taxa.all %}
-            <li><a href="{% url simplekey-species species.genus.slug species.epithet|cut:' ' %}"
-                ><em>{{ species.genus|make_list|first }}. {{ species.epithet }}</em></a></li>
-          {% endfor %}
-        </ul>
-    </div>
-
-    <div id="drawings">
-      {% if item_drawings %}
-      <ul>
-        {% for i in item_drawings %}
-        <li>
-          <div class="ItemDrawing">
-            {{ i.image.thumbnail_tag }}
-          </div>
-         <h4>{{ i.alt }}</h4>
-        </li>
-        {% endfor %}
-      </ul>
-      {% else %}
-          {# temporary dummy presentation until we have data #}
-          <div>
-              <img src="/static/nothing.png" alt="placeholder image 1">
-              <p>placeholder caption 1</p>
-          </div>
-          <div>
-              <img src="/static/nothing.png" alt="placeholder image 2">
-              <p>placeholder caption 2</p>
-          </div>
-          <div>
-              <img src="/static/nothing.png" alt="placeholder image 3">
-              <p>placeholder caption 3</p>
-          </div>
-      {% endif %}
-    </div>
-
-  </div>
+Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
 {% endblock %}
 
-{% block js_bottom %}
-  <script>
-      API_URL = '{% url api-base %}';
-      dojo.require('gobotany.sk.genus');
-      dojo.addOnLoad(function() {
-          gobotany.sk.genus.init('{{ item.slug }}');
-      });
-  </script>
+{% block body %}
+    <body id="genus" class="claro app genus">
+        {% include "simplekey/_header.html" %}
+
+        <div class="content">
+            <div class="container">
+                <div id="main">
+                    <h2>Genus: <i>{{ genus.name }}</i></h2>
+                    {% if common_name %}<h3>{{ common_name }}</h3>{% endif %}
+                    <p class="description">
+                    {% if item.description %}
+                        {{ item.description }}
+                    {% else %}
+                        TO DO: Add description in the database.
+                        This is a placeholder description.
+                        (Test glossary highlighting here with a few terms,
+                        such as abaxial, berry, creeping, fruit and
+                        perennial.)
+                    {% endif %}
+                    </p>
+
+                    <div class="pics">
+                        {% for drawing in genus_drawings %}
+                            <div>
+                                <a rel="shadowbox"
+                                    href="{{ drawing.image.url }}">
+                                    <img class="map"
+                                        src="{{ drawing.image.thumbnail.absolute_url }}"
+                                        alt="{{ drawing.alt }}"></a>
+                                <p>{{ drawing.alt }}</p>
+                                <a class="enlarge" rel="shadowbox"
+                                    href="{{ drawing.image.url }}">
+                                    <img class="zoom"
+                                    src="/static/images/icons/zoom.png"
+                                    alt="enlarge"></a>
+                            </div>
+                        {% endfor %}
+                    </div>
+
+                    <h4>Family</h4>
+                    <p class="family">
+                        <a href="{% url simplekey-family genus.family.slug %}"
+                        >{{ genus.family.name }}{% if genus.family.common_name %} ({{ genus.family.common_name }}){% endif %}</a></p>
+
+                    <h4>This Genus&#8217;s Species:</h4>
+                    <ul class="species">
+                    {% for species in genus.taxa.all %}
+                        <li><i><a href="{% url simplekey-species species.genus.slug species.epithet %}"
+                        >{{ species.scientific_name }}</a></i></li>
+                    {% endfor %}
+                    </ul>
+
+                    {# TODO: need genus-species button, like family-genera button #}
+                    <a class="genus-species-btn"
+                        href="{% url simplekey-pile pilegroup.slug pile.slug %}#genus={{ genus.name }}">Key
+                        to this Genus&#8217;s Species</a>
+
+                </div>
+                <div id="sidebar" style="height: 634px;">
+                    {% include "simplekey/_sidebar_items.html" %}
+                </div>
+                <div class="clearit"></div>
+            </div>
+        </div>
+
+        {% include "simplekey/_footer.html" %}
+
+        {% include "simplekey/_script_constants.html" %}
+
+        <script>
+            {% include "simplekey/partner_site_inline_js.html" %}
+        </script>
+        
+        {% block js_bottom %}
+        <script>
+        API_URL = '{% url api-base %}';
+        dojo.require('gobotany.sk.genus');
+        dojo.addOnLoad(function() {
+            gobotany.sk.genus.init('{{ genus.slug }}');
+        });
+        </script>
+        {% endblock %}
+
+
+    </body>
 {% endblock %}
+
