Adjust search engine index templates for Genus page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1383 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/genus.html
+++ b/gobotany/simplekey/templates/simplekey/genus.html
@@ -3,8 +3,7 @@
 {% load simplekey_extras %}
 
 {% block title %}
-Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
-{% endblock %}
+Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}{% endblock %}
 
 {% block body %}
     <body id="genus" class="claro app genus">
