--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -1,37 +1,7 @@
-<style>
-#notify-container {
-    color: ##D4EE3B;
-    font-size: 150%;
-    font-weight: bold;
-    height: 0;
-    left: 0;
-    position: fixed;
-    text-align: center;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-}
-
-#notify-container div {
-    background-color: #E39F19;
-    border-bottom: 1px solid #D6800C;
-    padding: 7px 0;
-    color: #735005;
-}
-
-#notify-container a {
-    color: #735005;
-    text-decoration: underline;
-}
-</style>
-
-<div id="notify-container">
-    <div style="" id="notify--1">
-        <span class="notify-text">
-           DRAFT: this web site under development.
-        </span>
-    </div>
-</div>
+<!-- Disable 'draft' notice while implementing visual design Phase 2 -->
+<!--div id="notify">
+    <div>DRAFT: This web site is under development.</div>
+</div-->
 
 
     <header>
